# AI_Developer_2026_Cibertec

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
cap1/: conceptos manuales.xlsx  laboratorio 01.ipynb  laboratorio 02.ipynb
cap2/: laboratorio 03.ipynb  laboratorio 04.ipynb
cap3/: laboratorio 05.ipynb  laboratorio 06.ipynb
cap3/chroma_lab04/: chroma.sqlite3
cap3/chroma_lab05/: chroma.sqlite3
cap3/docs_techcorp/: manual_deploy.txt  manual_servidores.txt
cap4/: laboratorio 07.ipynb  laboratorio 08.ipynb  ventas.db
cap5/laboratorio_09/: README.md  cliente_prueba.py  main.py  schemas.py
cap5/laboratorio_10/: .dockerignore  Dockerfile  README.md  main.py  requirements.txt
cap5/laboratorio_10/docs/: manual_monitoreo.txt  manual_rrhh.txt  manual_seguridad.txt
proyecto_integrador/: .dockerignore  Dockerfile  README.md  agente.py  main.py  requirements.txt
proyecto_integrador/data/: ventas_hist.db
proyecto_integrador/frontend/: app.py
proyecto_integrador/rag/chroma/: chroma.sqlite3
proyecto_integrador/rag/docs/: Política de Business Intelligence AndeanFoods.docx
proyecto_integrador/tools/: rag_tool.py  sql_tool.py  web_tool.py
